2007-03-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2) : heuristics added

	* src/vector.c (igraph_vector_contains) : added
	
	* src/vector.c (igraph_vector_search) : added const to vector argument
	
2007-03-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2) : added

2007-03-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_d, igraph_evolver_mes_d)
	(igraph_evolver_st_d, igraph_evolver_exp_d, igraph_evolver_ad)
	(igraph_evolver_mes_ad, igraph_evolver_st_ad, igraph_evolver_exp_ad) :
	added

2007-03-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_id_expected2) : added

	* src/matrix.c (igraph_matrix_sum) : added

2007-03-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_id_expected) 
	(igraph_measure_dynamics_idage_expected) : added
	
	* src/measure_dynamics.c (igraph_measure_dynamics_id)
	(igraph_measure_dynamics_idage) : cites option added

	* src/measure_dynamics.c (igraph_measure_dynamics_id) :
	debug and debugdeg options added

2007-03-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c 
	(igraph_measure_dynamics_citingcat_citedcat_st) : 
	two bugs corrected

	* src/measure_dynamics.c
	(igraph_measure_dynamics_citingcat_citedcat)
	(igraph_measure_dynamics_citingcat_citedcat_st) : added

2007-03-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_citing_cited_type_game) : added

	* src/games.c (igraph_cited_type_game) : added

	* src/measure_dynamics.c (igraph_measure_dynamics_citedcat)
	(igraph_measure_dynamics_citedcat_st) : added

2007-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_id)
 	(igraph_mesure_dynamics_idage, igraph_measure_dynamics_lastcit) :
	'no' argument added

2007-03-12  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/package/__init__.py : added Graph.summary,